WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243532
Release assert in ContainerNode::takeAllChildrenFrom via executeTakeAllChildrenAndReparentTask
https://bugs.webkit.org/show_bug.cgi?id=243532
Summary
Release assert in ContainerNode::takeAllChildrenFrom via executeTakeAllChildr...
Ryosuke Niwa
Reported
2022-08-04 01:44:03 PDT
We hit this release assert inside the adoption agency algorithm.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-08-04 01:57:23 PDT
<
rdar://97909274
>
Ryosuke Niwa
Comment 2
2022-08-04 01:57:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3006
EWS
Comment 3
2022-08-04 10:41:19 PDT
Committed
253119@main
(1f03945868bd): <
https://commits.webkit.org/253119@main
> Reviewed commits have been landed. Closing PR #3006 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug