Release assert in ContainerNode::takeAllChildrenFrom via executeTakeAllChildrenAndReparentTask https://bugs.webkit.org/show_bug.cgi?id=243532

Reviewed by Darin Adler.

Skip inserting a child that has been re-inserted back elsewhere in takeAllChildrenFrom
instead of hitting a release assertion. WebKit's new behavior matches that of Gecko and Blink.

* LayoutTests/fast/parser/parser-take-all-children-from-iframe-load-mutation-expected.txt: Added.
* LayoutTests/fast/parser/parser-take-all-children-from-iframe-load-mutation.html: Added.

* Source/WebCore/dom/ContainerNode.cpp:
(WebCore::ContainerNode::takeAllChildrenFrom):

Canonical link: https://commits.webkit.org/253119@main